<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <Button
            android:id="@+id/simple_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_listview"
            >
        </Button>
        <Button
            android:id="@+id/async_imageloader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/async_imageloader"
            >
        </Button>
        <Button 
            android:id="@+id/send_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_sms"/>
        <Button 
            android:id="@+id/parse_json"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/json_parser"/>
        <Button 
            android:id="@+id/fragment_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_pager"/>
        <Button 
            android:id="@+id/fragment_touch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_touch"/>
        <Button 
            android:id="@+id/array_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/array_adapter"/>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hello_world" />
	    </LinearLayout>
    </ScrollView>

</LinearLayout>